
[TestSetOutputs/set_outputs_with_invalid_output - 1]
../bin/sway-setter -t set_outputs --print < data.json
Error: failed to parse input content
Hint: make sure to use a file generated by the `swaymsg -t get_outputs` output

---

[TestSetOutputs/set_outputs_without_name - 1]
../bin/sway-setter -t set_outputs --print < data.json
Error: output name is empty

---

[TestSetOutputs/set_outputs_one_output - 1]
../bin/sway-setter -t set_outputs --print < data.json
output DP-2 position 1920 0

---

[TestSetOutputs/set_outputs_multiple_outputs - 1]
../bin/sway-setter -t set_outputs --print < data.json
output DP-2 position 1920 0
output DP-1 position 0 0

---
